untangle-apache2-config: disable SSL for now, as nothing in this port generates the certificate
Signed-off-by: Mathew McBride <matt@traverse.com.au>

--- a/untangle-apache2-config/files/etc/apache2/sites-available/uvm.conf
+++ b/untangle-apache2-config/files/etc/apache2/sites-available/uvm.conf
@@ -50,11 +50,11 @@ CustomLog /var/log/apache2/access.log combined
     IncludeOptional /etc/apache2/uvm-dev*.conf
 </VirtualHost>
 
-<VirtualHost *:443>
-    SSLEngine on
-    SSLCertificateFile /etc/apache2/ssl/apache.pem
-    IncludeOptional /etc/apache2/uvm-dev*.conf
-    Include /etc/apache2/uvm.conf
-    IncludeOptional /etc/apache2/uvm-dev*.conf
-</VirtualHost>
+#<VirtualHost *:443>
+    #SSLEngine on
+   # SSLCertificateFile /etc/apache2/ssl/apache.pem
+   # IncludeOptional /etc/apache2/uvm-dev*.conf
+   # Include /etc/apache2/uvm.conf
+   # IncludeOptional /etc/apache2/uvm-dev*.conf
+#</VirtualHost>
 
