(traverse ci) create debian repo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,11 @@ build_arm64:
         image: registry.gitlab.com/matt_traverse/debian-build-container:aarch64
         tags: ["arm64"]
         script: 
+          - su build
           - ./traverse-build.sh
-          - mkdir debs; mv *.deb debs
+          - mkdir -p repo/conf
+          - cp _repoconf repo/conf/distributions
+          - reprepro -b repo includedeb stretch *.deb
         artifacts:
           paths:
-            - debs
+            - repo
