build ngfw-upstream with this as well

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ build_arm64:
         tags: ["arm64"]
         script: 
           - su build
+          - git clone https://github.com/untangle/ngfw_upstream
           - ./traverse-build.sh
           - mkdir -p repo/conf
           - cp _repoconf repo/conf/distributions
